  accidentally overlooked.
* fixed small diff in postcript output from RNAfold
* Deprecation and discontinued warnings are now not ignored by default.
  cogent.util.warning was ignored in Python 2.7 because it uses
  DeprecationWarnings. These warnings are temporarily forced to not be ignored.
* Included test_app/test_formatdb.py and test_app/test_mothur.py files in
  alltests.py.

Cogent 1.5 - 1.5.1
==================

New Features
------------

* Alignments can now add sequences that are pairwise aligned to a sequence
  already present in the alignment.
* Alignment.addSeqs has more flexibility with the specific order of sequences
  now controllable by the user. Thanks to Jan Kosinski for these two very
  useful patches!
* Increased options for reading Table data from files: limit keyword; and,
  line based (as distinct from column-based) type-casting of delimited files.
* Flexible parser for raw Greengenes 16S records
* Add fast pairwise distance estimation for DNA/RNA sequences. Currently only
  Jukes-Cantor 1969 and Tamura-Nei 1993 distances are provided. A cookbook
  entry was added to building_phylogenies.
* Added a PredefinedNucleotide substitution model class. This class uses
  Cython implementations for nucleotide models where analytical solutions
  are available. Substantial speedups are achieved. These implementations
  do not support obtaining the rate matrix. Use the older style implementation
  if you require that (toggled by the rate_matrix_required argument).
* Added fit_function function. This allows to fit any model to a x and y 
  dataset using simplex to reduce the error between the model and the data.
* Added parsers for bowtie and for BLAT's PSL format
* Table can now read/write gzipped files.
* GeneticCode class has a getStopIndices method. Returns the index positions
  of stop codons in a sequence for a user specified translation frame.
* Added LogDet metric to cogent.evolve.pairwise_distance. With able assistance